k8s/templates/platform/true/add.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-frontend-ingress
  labels:
    name: hhb-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: ${CERT_MANAGER_ISSUER}
spec:
  tls:
    - hosts:
        - ${HHB_FRONTEND_DNS}
      secretName: hhb-frontend-ingress-tls
  rules:
    - host: ${HHB_FRONTEND_DNS}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhb-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-backend-ingress
  labels:
    name: hhb-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ${HHB_FRONTEND_DNS}
      secretName: hhb-frontend-ingress-tls
  rules:
    - host: ${HHB_FRONTEND_DNS}
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hhb-backend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-unleashservice-ingress
  labels:
    name: hhb-unleashservice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ${HHB_HOST}
      secretName: hhb-frontend-ingress-tls
  rules:
    - host: ${HHB_HOST}
      http:
        paths:
          - path: /api/unleash
            pathType: Prefix
            backend:
              service:
                name: hhb-unleashservice
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-backendburgers-ingress
  labels:
    name: hhb-backendburgers-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ${HHB_HOST}
      secretName: hhb-frontend-ingress-tls
  rules:
    - host: ${HHB_HOST}
      http:
        paths:
          - path: /api/burgers
            pathType: Prefix
            backend:
              service:
                name: hhb-backendburgers
                port:
                  number: 80
