k8s/templates/platform/true/remove_dex_patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-dex-ingress
${DOLLAR}patch: delete
